# evals

./: .gitignore  README.md  package-lock.json  pyproject.toml
lm_eval/: __main__.py  config.py  evaluator.py  record.py  scholar_api.py  utils.py
lm_eval/api/: model.py  task.py
lm_eval/models/: huggingface.py  openai_completions.py
scripts/: make_table_results.py  make_table_tasks.py  write_out.py
scripts/clean_training_data/: compress_and_package.py  generate_13_grams.py  process_sorted_buckets.py  sort_13_gram_buckets.py
tests/tests_master/: test_generate_13_grams.py
